Adding qtum fixes
