# qtum-connector/module/src/QtumController.ts
@@ -1,4 +1,4 @@
-import { Body, Get, Param, Post } from '@nestjs/common';
+import {Body, Get, HttpCode, HttpStatus, Param, Post, Query,} from '@nestjs/common';
 import { QtumService } from './QtumService';
 import { QtumError } from './QtumError';
 import { QtumIRawTransactionInfo, QtumIRawTransactions } from '@tatumio/tatum/dist/src/model/response';
@@ -16,6 +16,7 @@ export abstract class QtumController {
     }
     protected abstract isTestnet(): Promise<boolean>
     @Post('v3/qtum/wallet/priv')
+    @HttpCode(HttpStatus.OK)
     async generatePrivateKey(@Body() body: GeneratePrivateKey) {
         try {
             return await generatePrivateKeyFromMnemonic(Currency.QTUM, await this.isTestnet(), body.mnemonic, body.index);
@@ -24,6 +25,7 @@ export abstract class QtumController {
         }
     }
     @Get('v3/qtum/address/:xpub/:i')
+    @HttpCode(HttpStatus.OK)
     async generateAddress(@Param() { xpub, i }: PathXpubI) {
         try {
             return await generateAddressFromXPub(Currency.QTUM, await this.isTestnet(), xpub, Number(i));
@@ -32,6 +34,7 @@ export abstract class QtumController {
         }
     }
     @Get('v3/qtum/block/current')
+    @HttpCode(HttpStatus.OK)
     async getCurrentBlock() {
         try {
             return await this.service.getCurrentBlock();
@@ -48,6 +51,7 @@ export abstract class QtumController {
         }
     }
     @Get('v3/qtum/address/:key')
+    @HttpCode(HttpStatus.OK)
     async generateAddressPrivatekey(@Param() { key }: PathKey) {
         try {
             return await generateAddressFromPrivatekey(Currency.QTUM,  await this.isTestnet(), key);
@@ -56,6 +60,7 @@ export abstract class QtumController {
         }
     }
     @Post('v3/qtum/broadcast')
+    @HttpCode(HttpStatus.OK)
     async broadcast(@Body() body: { rawtx: string }) {
         try {
             return await this.service.broadcast(body.rawtx);
@@ -64,7 +69,8 @@ export abstract class QtumController {
         }
     }
 
-    @Get('/v3/qtum/utxo/:address')
+    @Get('v3/qtum/utxo/:address')
+    @HttpCode(HttpStatus.OK)
     async getQtumUTXOs(@Param() { address }: PathAddress) {
         try {
             return await this.service.getQtumUTXOs(address);
@@ -72,7 +78,8 @@ export abstract class QtumController {
             throw new QtumError(`Unexpected error occurred. Reason: ${e.message || e.response?.data || e}`, 'qtum.error');
         }
     }
-    @Get('/v3/qtum/address/:address/balance')
+    @Get('v3/qtum/account/:address/balance')
+    @HttpCode(HttpStatus.OK)
     async getInfo(@Param() { address }: PathAddress) {
         try {
             return await this.service.getInfo(address);
@@ -80,23 +87,26 @@ export abstract class QtumController {
             throw new QtumError(`Unexpected error occurred. Reason: ${e.message || e.response?.data || e}`, 'qtum.error');
         }
     }
-    @Get('/v3/qtum/transaction/:id')
-    async getQtumTransaction(@Param() { id }: PathId): Promise<QtumIRawTransactionInfo> {
+    @Get('v3/qtum/transaction/:hash')
+    @HttpCode(HttpStatus.OK)
+    async getQtumTransaction(@Param() { hash }: PathId): Promise<QtumIRawTransactionInfo> {
         try {
-            return await this.service.getQtumTransaction(id);
+            return await this.service.getQtumTransaction(hash);
         } catch (e) {
             throw new QtumError(`Unexpected error occurred. Reason: ${e.message || e.response?.data || e}`, 'qtum.error');
         }
     }
-    @Get('/v3/qtum/transactions/address/:address/?pageSize=:pageSize&offset=:offset')
-    async getQtumTransactions(@Param() { address, pageSize, offset }: Pagination): Promise<QtumIRawTransactions> {
+    @Get('v3/qtum/transactions/address/:address')
+    @HttpCode(HttpStatus.OK)
+    async getQtumTransactions(@Param() address: string, @Query() query: Pagination): Promise<QtumIRawTransactions> {
         try {
-            return await this.service.getQtumTransactions(address, pageSize, offset);
+            return await this.service.getQtumTransactions(address, query.pageSize, query.offset);
         } catch (e) {
             throw new QtumError(`Unexpected error occurred. Reason: ${e.message || e.response?.data || e}`, 'qtum.error');
         }
     }
-    @Get('/v3/qtum/transactions/gas/:nblocks')
+    @Get('v3/qtum/transactions/gas/:nblocks')
+    @HttpCode(HttpStatus.OK)
     async estimateFee(@Param() nblocks: number): Promise<any> {
         try {
             return await this.service.estimateFee(nblocks);
@@ -104,7 +114,8 @@ export abstract class QtumController {
             throw new QtumError(`Unexpected error occurred. Reason: ${e.message || e.response?.data || e}`, 'qtum.error');
         }
     }
-    @Get('/v3/qtum/transactions/gasbytes/:nblocks')
+    @Get('v3/qtum/transactions/gasbytes/:nblocks')
+    @HttpCode(HttpStatus.OK)
     async estimateFeePerByte(@Param() nblocks: number): Promise<any> {
         try {
             return await this.service.estimateFeePerByte(nblocks);
